# .dotfiles

./: .build.yml  .configy  .gitignore  Justfile  LICENSE  README.md  flake.nix  home.nix  result  setup-fonts.sh  setup.sh  system.nix  tix.toml  treefmt.toml
.github/workflows/: build.yml
apps/: wezterm.nix
apps/wezterm/: wezterm.lua
compose/: syncthing-docker-compose.yml
helix/: config.toml
home/apps/: ghostty.nix  librewolf.nix  rio.nix  wezterm.nix
home/tools/: bat.nix  btop.nix  carapace.nix  direnv.nix  fish.nix  flatpak.nix  fzf.nix  helix.nix  mpv.nix  podman.nix  starship.nix  yazi.nix  zellij.nix
homes/debarchito/: atuin.nix  default.nix  delta.nix  direnv.nix  eza.nix  fastfetch.nix  fish.nix  flatpak.nix  fzf.nix  gh.nix  ghostty.nix  git.nix  gpg.nix  helix.nix  jujutsu.nix  librewolf.nix  niri.nix  obs-studio.nix  rbw.nix  reaper.nix  starship.nix  vcs.nix  yazi.nix  zed-editor.nix  zellij.nix  zoxide.nix
hosts/laptop/: default.nix  hardware-configuration.nix
julia/: startup.jl
modules/: determinate.nix  disko.nix  flake-file.nix  flake-parts.nix  home-manager.nix  import-tree.nix  nixpkgs.nix  systems.nix  templates.nix  treefmt-nix.nix
modules/_templates/ocaml/: dune-project  flake.nix  hello.opam
modules/_templates/ocaml/lib/hello/: dune
modules/_templates/ocaml/test/hello/: dune  test_hello.t
modules/apps/: impure-setup.nix
modules/desktop/: default.nix  niri.nix  plasma.nix
modules/features/: browsers.nix  common.nix  containers.nix  desktop.nix  editors.nix  gaming.nix  media.nix  (+7 more)
patches/: prismlauncher-unwrapped.patch
templates/ocaml/: .ocamlformat  .template  dune-project  flake.nix  {{name:s}}.opam
templates/ocaml/lib/{{name:s}}/: dune
templates/ocaml/test/{{name:s}}/: test_{{name:s}}.t
templates/python/: .gitignore  .template  flake.nix  pyproject.toml  pyrightconfig.json
templates/python/.helix/: languages.toml
templates/python/src/{{name:s}}/: __main__.py
templates/python/test/: test_{{name:s}}.py
tools/: cargo.nix  fish.nix  helix.nix  starship.nix  zellij.nix
wezterm/: .wezterm.lua
wm/: default.nix  plasma.nix
(+112 files in other folders)
