(lang dune 3.22)

(name {{name:s}})

(generate_opam_files true)

(cram enable)

(source
 (codeberg debarchito/{{name:k}}))

(authors "Debarchito Nath <debarchiton@proton.me>")

(maintainers "Debarchito Nath <debarchiton@proton.me>")

(package
 (name {{name:s}})
 (synopsis "{{synopsis}}")
 (description "{{description}}")
 (depends
  (ocaml
   (>= "5.4.1")))
 (tags
  ("{{name:k}}")))
