[project]
name = "{{name:k}}"
version = "0.1.0"
description = "{{description}}"
authors = [{ name = "Debarchito Nath", email = "debarchiton@proton.me" }]
keywords = ["{{name:k}}"]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
{{name:k}} = "{{name:s}}.__main__:main"

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=9.0.2"]

