(lang dune 3.22)

(name hello)

(generate_opam_files true)

(cram enable)

(source
 (codeberg debarchito/hello))

(authors "Debarchito Nath <debarchiton@proton.me>")

(maintainers "Debarchito Nath <debarchiton@proton.me>")

(documentation https://debarchito.is-a.dev/hello)

(package
 (name hello)
 (synopsis "Say hello to the world")
 (description "Say HELLO to the world")
 ; (license GPL-3.0-only)
 (depends
  (ocaml
   (>= "5.4.1")))
 (tags
  ("hello")))
